Avoid table overflow in Tokens page.

--- a/src/styles/explorer.css
+++ b/src/styles/explorer.css
@@ -249,7 +249,7 @@ div.h-side-by-side-content {
     gap: 16px;
 }
 
-@media (min-width: 1280px) {
+@media (min-width: 1600px) {
     div.h-side-by-side-content {
         display: grid;
         gap: 16px;
